# python-project-52

./: Makefile  README.md  db.sqlite3  examples.sql  manage.py  pyproject.toml
.github/workflows/: github-actions.yml
labels/: admin.py  models.py  tests.py  urls.py  views.py
labels/locale/en_us/LC_MESSAGES/: django.po
labels/migrations/: 0001_initial.py
statuses/: forms.py  models.py  urls.py  views.py
statuses/locale/en_us/LC_MESSAGES/: django.po
statuses/migrations/: 0001_initial.py
task_manager/: forms.py  rollbar_middleware.py  settings.py  test.py  tests.py  urls.py  views.py
task_manager/locale/en_us/LC_MESSAGES/: django.po
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: label_create.html  label_delete.html  labels.html
task_manager/templates/statuses/: create_status.html  delete_status.html  statuses.html  update_status.html
task_manager/templates/tasks/: task.html  task_create.html  task_delete.html  tasks.html
task_manager/templates/users/: create.html  delete.html  update.html  users.html
tasks/: filters.py  forms.py  models.py  permission.py  urls.py  views.py
tasks/locale/en_us/LC_MESSAGES/: django.po
tasks/migrations/: 0001_initial.py  0002_alter_task_creator_alter_task_description_and_more.py  0003_alter_task_labels.py  0004_remove_task_creator_remove_task_task_user_and_more.py
users/: forms.py  manager.py  models.py  urls.py  views.py
users/locale/en_us/LC_MESSAGES/: django.po
users/migrations/: 0001_initial.py  0002_rename_nickname_customuser_username.py
users/templates/users/: users.html
