[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task-manager project"
authors = ["SizNi <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
