[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task-manager project"
authors = ["SizNi <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
python-dotenv = "^0.21.0"
i18n = "^0.2"
django-bootstrap4 = "^22.3"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"
django-bootstrap-form = "^3.4"
rollbar = "^0.16.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
